Agregar Cliente desde Modal

--- a/core/login/templates/login.html
+++ b/core/login/templates/login.html
@@ -85,7 +85,7 @@
                         </script>
                     </div>
                     <div class="mt-5 text-center">
-                        <p>© 2020 Qovex. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                        <p>© 2020 Asystente Empresarial.</p>
                     </div>
 
                 </div>
