--- a/core/erp/templates/sale/create.html
+++ b/core/erp/templates/sale/create.html
@@ -1,4 +1,5 @@
 {% extends 'list.html' %}
+{% load widget_tweaks %}
 {% load static %}
 {% block head_list %}
     <link href="{% static 'lib/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.css' %}" rel="stylesheet"/>
@@ -6,7 +7,7 @@
     <link href="{% static 'lib/jquery-ui-1.12.1/jquery-ui.min.css' %}" rel="stylesheet"/>
 {% endblock %}
 {% block content %}
-    <form method="post">
+    <form id="frmSale" method="post">
         <div class="card card-default">
             <div class="card-header">
                 <h3 class="card-title">
@@ -32,13 +33,13 @@
                                 <div class="form-group">
                                     <label>Buscador de Productos</label>
                                     <div class="input-group">
-                                       <!-- <input type="text" class="form-control" name="search"
-                                               placeholder="Ingrese una palabra clave para búsqueda de productos"
-                                               autocomplete="off">
-                                        <span class="input-group-append">
-                                        <button type="button" class="btn btn-danger btnClearSearch"><i
-                                                class="fas fa-times"></i></button>
-                                        </span> -->
+                                        <!-- <input type="text" class="form-control" name="search"
+                                                placeholder="Ingrese una palabra clave para búsqueda de productos"
+                                                autocomplete="off">
+                                         <span class="input-group-append">
+                                         <button type="button" class="btn btn-danger btnClearSearch"><i
+                                                 class="fas fa-times"></i></button>
+                                         </span> -->
                                         <select class="form-control select2" name="search">
                                         </select>
                                     </div>
@@ -77,8 +78,15 @@
                                     {{ form.date_joined }}
                                 </div>
                                 <div class="form-group">
-                                    <label>Cliente</label>
-                                    {{ form.cli }}
+                                    <label>Cliente:</label>
+                                    <div class="input-group">
+                                        {{ form.cli }}
+                                        <div class="input-group-append">
+                                            <button class="btn btn-info btnAddClient" type="button">
+                                                <i class="fas fa-user-plus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label>Subtotal</label>
@@ -112,7 +120,37 @@
             </div>
         </div>
     </form>
-
+    <!-- Modal -->
+    <div class="modal fade" id="myModalClient" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <form id="frmClient" enctype="multipart/form-data" method="post">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">
+                            <b><i class="fas fa-user-plus"></i> Nuevo cliente</b>
+                        </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        {% for field in frmClient.visible_fields %}
+                            <div class="form-group">
+                                <label for="email">{{ field.label }}:</label>
+                                {{ field|add_class:'form-control'|attr:'autocomplete:off' }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary btn-block btn-flat">
+                            <i class="fas fa-save"></i> Guardar Cliente
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock %}
 
 {% block javascript %}
