--- a/core/login/templates/login/base.html
+++ b/core/login/templates/login/base.html
@@ -4,22 +4,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title> {{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
-    <meta content="Themesbrand" name="author" />
+    <meta content="Premium Multipurpose Admin & Dashboard Template" name="description"/>
+    <meta content="Themesbrand" name="author"/>
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'lib/plantilla/images/favicon.ico' %}">
 
     <!-- Bootstrap Css -->
-    <link href="{% static 'lib/plantilla/css/bootstrap.min.css' %}" id="bootstrap-style" rel="stylesheet" type="text/css" />
+    <link href="{% static 'lib/plantilla/css/bootstrap.min.css' %}" id="bootstrap-style" rel="stylesheet"
+          type="text/css"/>
     <!-- Icons Css -->
-    <link href="{% static 'lib/plantilla/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'lib/plantilla/css/icons.min.css' %}" rel="stylesheet" type="text/css"/>
     <!-- App Css-->
-    <link href="{% static 'lib/plantilla/css/app.min.css' %}" id="app-style" rel="stylesheet" type="text/css" />
+    <link href="{% static 'lib/plantilla/css/app.min.css' %}" id="app-style" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.css' %}" />
+
+    <!-- JQuery -->
+    <script src="{% static 'lib/plantilla/libs/jquery/jquery.min.js' %}"></script>
+
     <!-- Sweetalert2 -->
     <script src="{% static 'lib/sweetalert2-9.10.0/sweetalert2.all.min.js' %}"></script>
+
+
     {% block head %}
 
     {% endblock %}
@@ -29,6 +37,11 @@
 {% block content %}
 
 {% endblock %}
+<!-- Sweetalert2 -->
+
+<script src="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.js' %}"></script>
+<!-- Mis funciones -->
+<script src="{% static 'js/functions.js' %}"></script>
 </body>
 
 </html>
