--- a/core/erp/templates/category/create.html
+++ b/core/erp/templates/category/create.html
@@ -1,1 +1,33 @@
 {% extends 'form.html' %}
+{% load static %}
+{% block javascript %}
+    <script>
+        {% if form.errors %}
+            var errors = '';
+            {% for field in form %}
+                {% for error in field.errors %}
+                    errors += '{{ error }}\n';
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                errors += '{{ error }}\n';
+            {% endfor %}
+            Swal.fire({
+                title: 'Error',
+                text: errors,
+                icon: 'error'
+            });
+        {% endif %}
+
+        $('form').on('submit', function (e) {
+            e.preventDefault();
+            {#var parameters = $(this).serializeArray();#}
+            var parameters = new FormData(this);
+
+            submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de guardar el siguiente registro?', parameters, function () {
+                location.href = '{{ list_url }}';
+            });
+        });
+
+    </script>
+{% endblock %}
